# ANTS

./: .gitignore  README.md  requirements.txt
deploy/apps/: DDoS_app.py  DDoS_tense.py  app.py  debug_app.py
deploy/apps/network/: app.py
deploy/config/: network.ini
deploy/pipeline/: data_pipeline.py
deploy/traffic/: traffic_generator.py
documenation/network/: binary_classifier.txt  data_pipeline.txt  preprocess.txt
models/DDoS/: DDoS_XGBoost.py  DDoS_attention.py  DDoS_dropout.py  DDoS_gradientboost.py  DDoS_neural_network.py  DDoS_random_forest.py
models/helpers/: NN_helpers.py  NN_linear.py
models/malware/: malware_gnn.py
models/network/: binary_classifier.py  network_binary_classifier.json
models/phishing/: phishing_xgboost.py
pixi-py/: pyproject.toml
preprocessing/DDoS/: benign_random_sample.py  combine_data.py  feature_importance.py  feature_select_all.py  feature_select_attack.py  filter_attacks.py  preprocess.py  separate_data.py
preprocessing/malware/: gnn_preprocess.py  preprocess.py
preprocessing/network/: preprocess.py  verification.py
preprocessing/phishing/: feature_importance.py  feature_importance_phishing.csv  preprocessing.py
results/arch/: classifier_arch.txt
results/model_results/: DDoS_results.csv  DDoS_results_v2.csv
results/test_results/: attack_test_20250103_100018.txt  benign_test_20250103_100004.txt  multiple_test_results_20250103_161059.txt  multiple_test_results_20250125_141801.txt
tests/DDoS_tests/: attack_test.py  attack_with_select.py  benign_test.py  multiple_test.py
tests/phishing_test/: phish_test.py
(+8 files in other folders)
