[project]
authors = [{name = "KevinWeiss1995", email = "kjweiss1995@gmail.com"}]
dependencies = [
    "Flask==3.1.0",
    "joblib==1.4.2",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "requests==2.32.3",
    "scikit-learn==1.6.0"
]
description = "Add a short description here"
name = "pixi-py"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]
